--- a/validator/templates/validator/result.html
+++ b/validator/templates/validator/result.html
@@ -26,8 +26,8 @@
                         <span class="my-0 font-weight-normal no_edit_name">{% if val.name_tag %}{{val.name_tag}}{% endif %}</span>
                         <input class="d-none edit_name"/>
                         <button class="btn btn-sm btn-primary btn-action edit_name_btn" title="Change Name" onclick="edit_name(event)"><span class="fas fa-pen"></span></button>
-                        <button class="btn btn-sm btn-primary btn-action d-none save_name_btn" title="Save Name" onclick="ajax_save_name(event, '{{ val.id }}')"><span class="fas fa-save"></span></button>
-
+                        <button class="btn btn-sm btn-primary btn-action d-none save_name_btn result_page" title="Save Name" onclick="ajax_save_name(event, '{{ val.id }}')"><span class="fas fa-save"></span></button>
+                        <button class="btn btn-sm btn-primary btn-action d-none cancel_editing_btn result_page" title="Cancel" onclick="cancel_editing(event)"><span class="fas fa-ban"></span></button>
                     </h4>
                 </div>
                 <div class="card-body">
@@ -268,14 +268,10 @@
     csrf_token = '{{csrf_token}}';
     result_url = "{% url 'result' '00000000-0000-0000-0000-000000000000' %}";
     stop_validation_url = "{% url 'stop_validation' '00000000-0000-0000-0000-000000000000' %}";
-    user_runs_url = "{% url 'myruns' %}";
 </script>
 
 {% if is_owner %}
     <script src="{% static 'js/results_buttons.js' %}"></script>
-<!--Monika-->
-    <script src="{% static 'js/some_functions.js' %}"></script>
-<!--Monika-->
 {% endif %}
 
 {% endblock %}
