--- a/validator/templates/validator/user_runs.html
+++ b/validator/templates/validator/user_runs.html
@@ -3,10 +3,6 @@
 
 {% block content %}
 
-<!--Monika-->
-    <link href="{% static 'css/monika.css' %}" rel="stylesheet">
-<!--Monika-->
-
 <div class="container">
 
     <div class="container text-center mb-5 mt-4" style="max-width: 40rem;">
@@ -39,19 +35,16 @@
                             {% endif %}
                             <span class=" font-weight-normal">Started:</span> {{ valrun.start_time }}
                         </h5>
-<!--                        Monika-->
                         <h5 class="my-0" style="float: right">
                                 <span class=" font-weight-normal">Name:</span>
                         {% if valrun.name_tag %}
-
                                 <span class="font-weight-normal no_edit_name">{{ valrun.name_tag }}</span>
                         {% endif %}
-                                <input class="d-none edit_name"/>
+                                <input class="font-weight-normal d-none edit_name"/>
                                 <button class="btn btn-sm btn-primary btn-action edit_name_btn" title="Change Name" onclick="edit_name(event)"><span class="fas fa-pen"></span></button>
                                 <button class="btn btn-sm btn-primary btn-action d-none save_name_btn" title="Save Name" onclick="ajax_save_name(event, '{{ valrun.id}}')"><span class="fas fa-save"></span></button>
-                                <button class="btn btn-sm btn-primary btn-action d-none cancel_saving_btn" title="Cancel" onclick="cancel_editing(event)"><span class="fas fa-ban"></span></button>
+                                <button class="btn btn-sm btn-primary btn-action d-none cancel_editing_btn" title="Cancel" onclick="cancel_editing(event)"><span class="fas fa-ban"></span></button>
                         </h5>
-<!--                        Monika-->
 
                     </div>
                     <div class="card-body" style="padding: 0.5rem 1.25rem;">
@@ -156,11 +149,6 @@
         csrf_token = '{{csrf_token}}';
         result_url = "{% url 'result' '00000000-0000-0000-0000-000000000000' %}";
         stop_validation_url = "{% url 'stop_validation' '00000000-0000-0000-0000-000000000000' %}";
-        user_runs_url = "{% url 'myruns' %}";
     </script>
     <script src="{% static 'js/results_buttons.js' %}"></script>
-<!--Monika-->
-    <script src="{% static 'js/some_functions.js' %}"></script>
-
-<!--Monika-->
 {% endblock %}
