--- a/validator/static/css/service.css
+++ b/validator/static/css/service.css
@@ -124,10 +124,19 @@ html {
 
 .tab-plus {
     margin-left: auto;
-    margin-right: 1.3rem;
+    margin-right: 0.3rem;
     margin-top: .2rem;
     margin-bottom: .2rem;
     padding: 0 .35rem;
+}
+
+.tab-minus {
+    margin-left: auto;
+    margin-left: 0.3rem;
+    margin-top: .2rem;
+    margin-bottom: .2rem;
+    padding: 0 .35rem;
+    display:none;
 }
 
 a.doilink {
