some small changes of margins added

--- a/validator/static/css/service.css
+++ b/validator/static/css/service.css
@@ -131,8 +131,7 @@ html {
 }
 
 .tab-minus {
-    margin-left: auto;
-    margin-left: 0.3rem;
+    margin-left: 0.3;
     margin-top: .2rem;
     margin-bottom: .2rem;
     padding: 0 .35rem;
