added condition to prevent validation name changing if results are published

--- a/validator/templates/validator/result.html
+++ b/validator/templates/validator/result.html
@@ -23,11 +23,15 @@
                 <div class="card-header">
                     <h4 class="my-0 font-weight-normal">
                         Summary:
+                        {% if is_owner and val.is_unpublished %}
                         <span class="my-0 font-weight-normal no_edit_name">{% if val.name_tag %}{{val.name_tag}}{% endif %}</span>
                         <input class="d-none edit_name"/>
                         <button class="btn btn-sm btn-primary btn-action edit_name_btn" title="Change Name" onclick="edit_name(event)"><span class="fas fa-pen"></span></button>
                         <button class="btn btn-sm btn-primary btn-action d-none save_name_btn result_page" title="Save Name" onclick="ajax_save_name(event, '{{ val.id }}')"><span class="fas fa-save"></span></button>
                         <button class="btn btn-sm btn-primary btn-action d-none cancel_editing_btn result_page" title="Cancel" onclick="cancel_editing(event)"><span class="fas fa-ban"></span></button>
+                        {% else %}
+                        <span class="my-0 font-weight-normal no_edit_name">{{ val.doi }}/{% if val.name_tag %}{{val.name_tag}}{% endif %}</span>
+                        {% endif %}
                     </h4>
                 </div>
                 <div class="card-body">
