publishing dialog improved

--- a/validator/templates/validator/publishing_dialog.html
+++ b/validator/templates/validator/publishing_dialog.html
@@ -53,7 +53,7 @@
 
                         <p class="mt-3 mb-0">
                             <b>Please note:</b>
-                            Publishing the result can't be undone and you won't be able to delete the result later.<br/>
+                            Publishing the result can't be undone and you won't be able to delete the result nor change its metadata (including the validation name) later.<br/>
                             Publishing can take a few minutes, please be patient.
                         </p>
                     </div>
