--- a/validator/templates/validator/validate.html
+++ b/validator/templates/validator/validate.html
@@ -45,7 +45,7 @@
                                     <nav>
                                         <div class="nav nav-tabs" id="nav-tab" role="tablist">
                                             {% for dc_form in dc_formset %}
-                                                <a class="dc_form_link nav-item nav-link {% if forloop.first %}active{% endif %}" id="id_{{ dc_form.prefix }}-tab" data-toggle="tab" href="#id_{{ dc_form.prefix }}"  aria-controls="id_{{ dc_form.prefix }}" {% if forloop.first %}aria-selected="true"{% endif %}>Dataset</a>
+                                                <a class="dc_form_link nav-item nav-link {% if forloop.first %}active{% endif %}" id="id_{{ dc_form.prefix }}-tab" data-toggle="tab" href="#id_{{ dc_form.prefix }}"  aria-controls="id_{{ dc_form.prefix }}" {% if forloop.first %}aria-selected="true"{% endif %} onclick="clickClick(event)">Dataset</a>
                                             {% endfor %}
                                                 <a id="add_dc_form" class="tab-plus btn btn-primary" href="javascript:void(0)"><span class="fas fa-plus" title="Add another dataset"></span></a>
                                                 <a id="remove_dc_form" class="tab-minus btn btn-primary" href="javascript:void(0)"><span class="fas fa-minus" title="Remove active dataset"></span></a>
@@ -728,7 +728,7 @@
             var newLink = $(link_selector).clone(false);
             newLink.attr('id', newTabId);
             newLink.attr('href', '#' + newId);
-            newLink.attr('aria-controls', '#' + newId);
+            newLink.attr('aria-controls', newId);
 
             var newButton = $(removeButton).clone(true)
             removeButton.remove()
