--- a/validator/templates/validator/validate.html
+++ b/validator/templates/validator/validate.html
@@ -48,7 +48,7 @@
                                                 <a class="dc_form_link nav-item nav-link {% if forloop.first %}active{% endif %}" id="id_{{ dc_form.prefix }}-tab" data-toggle="tab" href="#id_{{ dc_form.prefix }}"  aria-controls="id_{{ dc_form.prefix }}" {% if forloop.first %}aria-selected="true"{% endif %} onclick="shiftTheButton(event, '#remove_dc_form')">Dataset</a>
                                             {% endfor %}
                                                 <a id="add_dc_form" class="tab-plus btn btn-primary" href="javascript:void(0)"><span class="fas fa-plus" title="Add another dataset"></span></a>
-                                                <a id="remove_dc_form" class="tab-minus btn btn-primary" href="javascript:void(0)"><span class="fas fa-minus" title="Remove active dataset"></span></a>
+                                                <a id="remove_dc_form" class="tab-minus btn" href="javascript:void(0)" title="Remove active dataset">&times;</a>
                                         </div>
                                     </nav>
 
@@ -744,7 +744,7 @@
             }
            // show remove button and change its
             if ( totalNoForms > 1 ) {
-                $(newButton).css('margin-left', '0.3rem')
+<!--                $(newButton).css('margin-left', '0.3rem')-->
                 newButton.show();
             }
 <!--            if (totalNoForms == $(maxSelector).val()) {-->
@@ -812,7 +812,6 @@
                 totalNoForms--
                  $(totalSelector).val(totalNoForms);
                  if (totalNoForms < $(maxSelector).val()) {
-                        $(removeButton).css('margin-left', '0.3rem')
                         addButton.show();
                     }
                  if (totalNoForms == 1) {
