--- a/validator/templates/validator/datasets.html
+++ b/validator/templates/validator/datasets.html
@@ -32,7 +32,6 @@
                     <th scope="col" style="width: 10%">Dataset</th>
                     <th scope="col" style="width: 20%">Details</th>
                     <th scope="col" style="width: 20%">Versions supported with Time Range Covered</th>
-<!--                    <th scope="col" style="width: 5%">Time Range Covered</th>-->
                     <th scope="col" style="width: 15%">Data availability</th>
                     <th scope="col" style="width: 10%">Citation</th>
                     <th scope="col" style="width: 25%">Filters</th>
@@ -54,19 +53,20 @@
                                 <ul>
                                     {% for version in dataset.versions.all %}
                                     <li>
-                                     <b> {{ version.pretty_name }}</b>{% if version.help_text != '-' and version.help_text != ''%} ({{ version.help_text }}): {%else%}: {% endif %}
-                                      {%if version.time_range_start == "" and version.time_range_end == "" %} Stattion dependent {%else%} From {{ version.time_range_start}} to {{ version.time_range_start}} {% endif %}
+                                     <b> {{ version.pretty_name }}</b>
+                                      {% if version.help_text != '-' and version.help_text != ''%}
+                                        ({{ version.help_text }})
+                                      {% endif %} <br>
+                                      {%if version.time_range_start == "" and version.time_range_end == "" %}
+                                        Time coverage is station dependent
+                                      {%else%}
+                                        From: {{ version.time_range_start}} <br>
+                                        To: {{ version.time_range_end}}
+                                      {% endif %}
                                     </li>
                                     {% endfor %}
                                 </ul>
                             </td>
-<!--                            <td>-->
-<!--&lt;!&ndash;                                <ul>&ndash;&gt;-->
-<!--                                    {% for version in dataset.versions.all %}-->
-<!--                                    <p>{{ version.time_range_covered}}</p>-->
-<!--                                    {% endfor %}-->
-<!--&lt;!&ndash;                                </ul>&ndash;&gt;-->
-<!--                            </td>-->
                             <td>{{ dataset.source_reference |safe }}</td>
                             <td>{{ dataset.citation |safe }}</td>
                             <td>
